# UK-Polling-Stations

./: .buildpacks  .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.txt  LICENSE.rst  Procfile  README.md  Vagrantfile  appspec.yml  bootstrap.sh  cdk.context.json  cdk.json  councils.json.REMOVED.git-id  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  tasks.py  tox.ini  warning.txt
.circleci/: config.yml  deploy-config.yml
.github/: dependabot.yml
.tx/: config
cdk/: app.py
cdk/lambdas/wdiv-s3-trigger/: Pipfile  README.md  dev-requirements.txt  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  run_tests.py  test-requirements.txt
cdk/lambdas/wdiv-s3-trigger/requirements/: base-constrained.in  base.in  testing-constrained.in  testing.in  testing.txt
cdk/lambdas/wdiv-s3-trigger/tests/: test_csv_helper.py  test_github_helper.py  test_handler.py
cdk/lambdas/wdiv-s3-trigger/tests/fixtures/: democracy-counts-utf-16le.csv  ems-dcounts-districts.csv  ems-dcounts-stations-small.csv  ems-dcounts-stations.csv  ems-idox-eros-2026-update.csv  ems-other.csv  ems-xpress-dc-nul.csv  ems-xpress-dc.csv  ems-xpress-weblookup.CSV  encoding-windows1252.tsv  ext-csv-with-tsv-ext.tsv  ext-tsv-with-csv-ext.csv  incomplete-file.CSV  not-a-csv.csv
cdk/lambdas/wdiv-s3-trigger/trigger/: __init__.py  csv_helpers.py  github_helpers.py  handler.py  wdiv_helpers.py
cdk/scripts/: create_logical_parameter_group.py  wdiv-s3-trigger-requirements.sh
cdk/stacks/: command_runner_stack.py  wdiv_s3_trigger_stack.py  wdiv_stack.py
data/: Polling Station List.docx  Polling.Stations_font_point.shx  README.md
data/E06000007-Warrington/: Polling Stations 2015 Up to date.MID  Polling Stations 2015 Up to date.mif  polling_districts 2012TAB.MID  polling_districts 2012TAB.mif
data/E06000010-Hull-City/: POLLING STATIONS.CSV
data/E06000011-East-Riding/: FOI 6287_polling-stations.xlsx  FOI6287_polling-stations.csv  Polling_Districts.dbf  Polling_Districts.shp  Polling_Districts.shp.xml  Polling_Districts.shx
data/E06000020-Telford-and-Wrekin/: Polling_Districts.dbf  Polling_Districts.sbn  Polling_Districts.sbx  Polling_Districts.shp  Polling_Districts.shx  Polling_Stations.dbf  Polling_Stations.sbn  Polling_Stations.sbx  Polling_Stations.shp  Polling_Stations.shp.xml  Polling_Stations.shx
data/E06000023-Bristol/: bristol_areas.kmz  bristol_polling.json
data/E06000026-Plymouth/: Plymouth Polling Stations.csv  Plymouth_Polling_Districts.kml
data/E06000028-Bournemouth/: Bournemouth_Polling_Districts.geojson  Polling Stations.csv
data/E06000033-Southend/: FoI Polling Stations - Joanna Geary.xlsx
data/E06000037- West Berkshire /: polling_districts.shx  polling_places.shp
data/E06000037-West-Berkshire/: Polling stations.rar  polling_districts.dbf  polling_districts.qix  polling_districts.sbn  polling_places.sbn  polling_places.sbx  polling_places.shp.xml  polling_places.shx
data/E06000038-Reading/: Polling Stations 2015.ID  Polling Stations 2015.IND  Polling Stations 2015.MAP  Polling Stations 2015.TAB  Polling districts 2012.ID  Polling districts 2012.IND  Polling districts 2012.MAP  Polling districts 2012.TAB  Review-Polling-Stations-AppxB.docx  polling_districts.dbf  polling_districts.shp  polling_districts.shx  polling_stations.dbf  polling_stations.prj  polling_stations.shp  polling_stations.shx
data/E06000041-Wokingham/: POLLING_DISTRICTS_region.dbf  POLLING_DISTRICTS_region.shp  POLLING_DISTRICTS_region.shx  POLLING_STATIONS_font_point.dbf  POLLING_STATIONS_font_point.shp  POLLING_STATIONS_font_point.shx
data/E06000044-Portsmouth/: PCC_Polling_2015.kml
data/E06000044-Portsmouth-City/: PCC_Polling_2015.json  polling_stations2015.csv
data/E06000045-Southampton/: PollingDistricts.kml  PollingStations.csv
data/E06000046-Isle-of-Wight/: Copy of Polling Stations with details - March 2015.csv
data/E07000004-Aylesbury-Vale/: FOI 4192 - Response.xlsx
data/E07000007-Wycombe/: polling-stations.csv
data/E07000009-East-Cambridgeshire/: FOIEIR 1415-971 Attachment.csv  electoral boundaries.dbf  electoral boundaries.sbn  electoral boundaries.sbx  electoral boundaries.shp  electoral boundaries.shx
data/E07000012-South-Cambridgeshire/: Polling Stations for Twitter_point.dbf  Polling Stations for Twitter_point.shp  Polling Stations for Twitter_point.shx
data/E07000031-South-Lakeland/: Copy of Polling Station Postcodes.csv
data/E07000034-Chesterfield/: All Polling Districts_region.dbf  All Polling Districts_region.shp  All Polling Districts_region.shx  All Polling Districts_text.dbf  All Polling Districts_text.prj  All Polling Districts_text.shp  All Polling Districts_text.shx  FOI 1647 response.doc  List of Polling Stations inc postcode.docx
data/E07000036-Erewash/: Polling Stations NEW.csv  README
data/E07000063-Lewes/: ERCOVER.CSV
data/E07000064-Rother/: POLDIST.DBF  POLDIST.SHP  POLDIST.SHX  Polling Station List - Rother District Council Wards 2015.docx
data/E07000065-Wealden/: PollingDistrictsMay2015.csv  PollingStationsMay2015.csv
data/E07000067-Braintree/: Polling_Districts.dbf  Polling_Districts.sbn  Polling_Districts.sbx  Polling_Districts.shp  (+7 more)
deploy/: create_deployment.py  create_deployment_group.py  deploy-env-vars.json  update_autoscaling_group.py
docs/: DEPLOYMENT.md  aws-resource-diagram.py  rds.md
polling_stations/: api.py  db_routers.py  urls.py  wsgi.py
requirements/: base-constrained.in  base.in  base.txt  cdk-constrained.in  cdk.in  cdk.txt  ci-constrained.in  ci.in  ci.txt  constraints-constrained.in  constraints.in  constraints.txt  local-constrained.in  local.in  local.txt  production-constrained.in  production.in  production.txt  testing-constrained.in  testing.in  testing.txt
scripts/: code-check.sh  install-local-python-deps.sh
(+2241 files in other folders)
